--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@mdx-js/react": "^3.0.0",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "axios": "^1.7.2",
     "clsx": "^2.0.0",
+    "dotenv": "^16.4.5",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
